--- a/localhost/index.html
+++ b/localhost/index.html
@@ -1,11 +1,13 @@
 <html>
+
 <head>
     <title>magic</title>
 </head>
+
 <body>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script type="text/javascript">
-        window.addEventListener('message', async function(event) {
+        window.addEventListener('message', async function (event) {
             const allowedOrigins = [
                 'https://debridmediamanager.com',
                 'https://beta.debridmediamanager.com',
@@ -17,18 +19,26 @@
             }
 
             const requestData = event.data;
-
             const { messageId, url, method, headers, body } = requestData;
-            try {
-                const response = await axios({ url, method, headers, data: body });
-                const responseData = { messageId, response: response.data };
-                window.parent.postMessage(responseData, event.origin);
-            } catch (error) {
-                const errorData = { messageId, error: error.toString() };
-                console.error('Error:', errorData);
-                window.parent.postMessage(errorData, event.origin);
-            }
+
+            const sleep = (ms) => new Promise(resolve => setTimeout(resolve, ms));
+
+            const makeRequest = async (retryCount = 0) => {
+                try {
+                    const response = await axios({ url, method, headers, data: body });
+                    const responseData = { messageId, response: response.data };
+                    window.parent.postMessage(responseData, event.origin);
+                } catch (error) {
+                    // when api returns an error, it will be caught here because there's no CORS headers
+                    console.warn('Rate limited, retrying...', retryCount + 1);
+                    await sleep(1000 * Math.pow(2, retryCount)); // Exponential backoff
+                    return await makeRequest(retryCount + 1);
+                }
+            };
+
+            await makeRequest();
         }, false);
     </script>
 </body>
+
 </html>
